--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 <div class="header">
     <div class="header-content">
-        <h2>Mari Al Ali</h2>
+        <a id="about-link" href="index.html">Mari Al Ali</a>
         <nav class="navigation">
-            <a class="border-right" href="#">About</a>
-            <a class="border-right" href="#">Portfolio</a>
-            <a href="#">Contact</a>
+            <a class="border-right" href="index.html">About</a>
+            <a class="border-right" href="portfolio.html" target="_blank">Portfolio</a>
+            <a href="contact.html" target="_blank">Contact</a>
         </nav>
     </div>
 </div>
@@ -23,7 +23,9 @@
         
     <div class="about-me">
             <h2>About me</h2>
-            <img src="assets/images/my_ph.png">
+            <a href="assets/images/my_ph_max.png" target="_blank" id="float"> 
+                <img src="assets/images/my_ph.png">
+            </a>
             <p class="text text-p">
                 Mari Al Ali is The Girl Who Lived, singled out by Lord Voldemort at birth to be his greatest rival, and our hero.
             </p>
@@ -53,10 +55,18 @@
             <p class="text">
                     Technically, this ill-fated idea was the brainchild of one Ronald Weasley, but Mari didn’t exactly try to talk her best friend out of flying Arthur’s enchanted Ford Anglia to Hogwarts. Had Mari been thinking sensibly – or (more likely) if Hermione had been with them – she would have sent a message on to Hogwarts with Hedwig and awaited instructions on what to do. But instead they decided to make an entrance.
                     <br>
+                    <br>
                     Of course, it wasn’t long before they were completely regretting that decision, and that was before they crashed into the Whomping Willow.
 
             </p>
+               
     </div> 
+
+    <div class="push"></div>
+
+</div>
+<div class="footer">
+    <p>Copyright &copy;</p>
 </div>
 </body>
 </html>
